--- a/src/css/Style.css
+++ b/src/css/Style.css
@@ -1,8 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+/*https://technext.github.io/confer/index.html*/
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Oswald:wght@200;300;400;500;600;700&display=swap');
+@import url('https://pro.fontawesome.com/releases/v5.10.0/css/all.css');
 
 body {
-    font-family: "Open Sans", sans-serif;
-    color: #444;
+    color: #797979;
+    background: #ffffff;
+    font-family: 'Lato', sans-serif;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -11,9 +15,10 @@ body {
     outline:none !important
 }
 
-h1, h2, h3, h4, h5, h6, .font-primary {
-    font-family: "Roboto", sans-serif;
+h1, h2, h3, h4, h5, h6 {
     line-height: 1.2;
+    color: #092a49;
+    font-family: 'Oswald', sans-serif;
 }
 
 h1 {
@@ -21,411 +26,398 @@ h1 {
 }
 
  h2 {
-    font-size: 2rem;
+    font-size: 50px;
+    font-weight: 200;
+    position: relative;
+    margin-left: 40px;
+}
+h2::after {
+    content: "";
+    position: absolute;
+    width: 200px;
+    height: 0;
+    top: 23px;
+    left: -40px;
+    border-bottom: 30px solid;
+    border-image: repeating-linear-gradient( 60deg, rgba(0,0,0,.05), rgba(0,0,0,.05) 1.5%, rgba(0,0,0,.1) 1.5%, rgba(0,0,0,.1) 3%) 30;
 }
 
  h3 {
-    font-weight: 400;
-    font-size: 26px;
+    font-size: 22px;
+    font-weight: 300;
+    letter-spacing: 1px;
 }
 h4 {
-    font-size: 1.5rem;
+    font-size:16px;
+    color: #797979;
+    font-family: 'Lato', sans-serif;
 }
 
-.logo{
-    font-size: 28px;
-    padding: 4px 0;
-    line-height: 1;
-    font-weight: 400;
-    letter-spacing: 3px;
-    text-transform: uppercase;
-    color: #fff;
-    font-family: "Roboto", sans-serif;
-}
-section {
-    padding: 60px 0;
+
+.fact {
+    padding:60px 0;
 }
 
-.breadcrumbs {
-    padding: 15px 0;
-    background-color: #f3f8fa;
-    min-height: 40px;
+.fact .fact-item {
+    position: relative;
+    width: 100%;
+    margin-bottom: 30px;
+    padding: 30px 0 25px 0;
+    text-align: center;
+    background: #ffffff;
+    border: 1px solid transparent;
+    box-shadow: 0 0 30px rgba(0, 0, 0, .1);
+    transition: .3s;
 }
-.breadcrumbs h2 {
+
+.fact .fact-item img {
+    max-height: 50px;
+    margin-bottom: 15px;
+}
+
+.fact .fact-item:hover {
+    border-color: rgba(0, 0, 0, .1);
+    box-shadow: none;
+}
+
+.about {
+    position: relative;
+    padding: 45px 0;
+}
+
+.about .about-img {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    transition: .5s;
+}
+
+.about .about-img-1 {
+    position: relative;
+    margin: 0 150px 150px 0;
+}
+
+.about .about-img-1 img, 
+.about .about-img-2 img {
+    position: relative;
+    width: 100%;
+}
+
+.about .about-img-2 {
+    position: absolute;
+    top: 150px;
+    left: 150px;
+    z-index: 1;
+}
+
+.about .about-img::after {
+    position: absolute;
+    content: "";
+    top: 60px;
+    right: 60px;
+    bottom: 60px;
+    left: 60px;
+    background: transparent;
+    border: 30px solid;
+    border-image: repeating-linear-gradient( 45deg, rgba(0,0,0,.05), rgba(0,0,0,.05) .5%, rgba(0,0,0,.1) .5%, rgba(0,0,0,.1) 1%) 30;
+    z-index: 1;
+}
+
+.about .about-text a.btn {
+    position: relative;
+    margin-top: 15px;
+    padding: 12px 25px;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    color: #092a49;
+    border: 2px solid #092a49;
+    border-radius: 0;
+    background: none;
+    transition: .3s;
+}
+
+.about .about-text a.btn:hover {
+    color: #0796fe;
+    background: #092a49;
+}
+
+
+.service .service-item {
+    position: relative;
+    width: 100%;
+    margin-bottom: 30px;
+    padding: 30px;
+    text-align: center;
+    border: 1px solid rgba(0, 0, 0, .1);
+    transition: .3s;
+}
+
+.service .service-item img {
+    max-height: 50px;
+    margin-bottom: 20px;
+}
+
+.service .service-item a {
+    position: relative;
+    font-size: 16px;
+    color: #0796fe;
+    transition: .3s;
+    text-decoration: none;
+}
+
+.service .service-item a::after {
+    content: "";
+    position: absolute;
+    width: 80%;
+    height: 2px;
+    bottom: -3px;
+    left: 10%;
+    background: #0796fe;
+}
+
+.service .service-item:hover {
+    border-color: transparent;
+    box-shadow: 0 0 30px rgba(0, 0, 0, .1);
+}
+.service {
+    position: relative;
+    width: 100%;
+    padding: 45px 0 15px 0;
+}
+.section-header {
+    position: relative;
+    text-align: left;
+    margin-bottom: 45px;
+}
+
+.feature {
+    position: relative;
+    padding: 45px 0;
+}
+
+.feature .feature-img {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+}
+
+.feature .feature-img img {
+    position: relative;
+    max-width: 100%;
+    max-height: 100%;
+    margin: 0 30px 30px 30px;
+    z-index: 2;
+}
+
+.feature .feature-img::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 70%;
+    top: 30%;
+    left: 0;
+    border: 30px solid;
+    border-image: repeating-linear-gradient( 45deg, rgba(0,0,0,.05), rgba(0,0,0,.05) .5%, rgba(0,0,0,.1) .5%, rgba(0,0,0,.1) 1%) 30;
+    z-index: 9;
+}
+.counters-text{
+    display: inline-block;
+    
+}
+.feature .counters i {
+    padding: 5px 15px 0 0;
     font-size: 28px;
+    color: #0796fe;
+    vertical-align: top;
+}
+
+.feature .counters h3 {
+    position: relative;
+    display: inline-block;
+    color: #0796fe;
+    font-size: 30px;
     font-weight: 300;
 }
 
-.breadcrumbs ul {
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    padding: 0;
+.feature .counters h3::after {
+    position: absolute;
+    content: "+";
+    top: -15px;
+    right: -15px;
+}
+
+.feature .counters p {
+    color: #092a49;
+    font-size: 20px;
     margin: 0;
 }
-.breadcrumbs ul li + li {
-    padding-left: 10px;
-}
-.breadcrumbs ul li + li::before {
-    display: inline-block;
-    padding-right: 10px;
-    color: #6c757d;
-    content: "/";
+
+.about,
+.service,
+.feature,
+.team,
+.review,
+.contact{
+    padding:60px 0;
 }
 
 
-.section-title{
-    text-align: center;
-}
-.section-title h2 {
-    font-size: 28px;
-    font-weight: 400;
-    margin-bottom: 20px;
-    padding-bottom: 20px;
+.contact .contact-info {
     position: relative;
+    display: flex;
+    padding:20px;
+    border: 1px solid rgba(0, 0, 0, .1);
+    margin-bottom: 30px;
+    transition: .3s;
 }
-.section-title h2::before {
-    content: '';
-    position: absolute;
-    display: block;
-    width: 120px;
-    height: 1px;
-    background: #ddd;
-    bottom: 1px;
-    left: calc(50% - 60px);
+.contact .contact-info:hover {
+    border-color: transparent;
+    box-shadow: 0 0 30px rgba(0, 0, 0, .1);
 }
-.section-title h2::after {
-    content: '';
-    position: absolute;
-    display: block;
-    width: 40px;
-    height: 3px;
-    background: #68A4C4;
-    bottom: 0;
-    left: calc(50% - 20px);
-}
-
-.backTop{
-    display: block;
-    position: fixed;
-    right:15px;
-    bottom:15px;
-    border-radius: 3px;
-    background: #68A4C4;
-    color: #fff;
-    transition: all 1000ms ease-in-out;
-    z-index: 99999;
-    border: none;
-    height: 40px;
-    width: 40px;
-}
-
-/*Home*/
-.services {
-    padding: 60px 0;
-}
-
-.services .icon-box {
-    padding: 30px;
+.contact .contact-icon {
     position: relative;
-    overflow: hidden;
-    margin: 0 0 40px 0;
-    background: #fff;
-    box-shadow: 0 5px 26px 0 rgba(68, 88, 144, 0.14);
-    transition: all 0.3s ease-in-out;
-    text-align: center;
-    border: 1px solid #fff;
-}
-
-.services .title {
-    font-weight: 700;
-    margin-bottom: 15px;
-    font-size: 18px;
-}
-.services .title a {
-    color: #111;
-}
-
-.services .icon {
-    margin: 0 auto 20px auto;
-    padding-top: 17px;
-    display: inline-block;
-    text-align: center;
-    border-radius: 50%;
-    width: 72px;
-    height: 72px;
-}
-
-.services .icon-box-pink .icon {
-    background: #fceef3;
-}
-
-.services .icon-box-cyan .icon {
-    background: #e6fdfc;
-}
-.services .icon-box-green .icon {
-    background: #eafde7;
-}
-.services .icon-box-blue .icon {
-    background: #e1eeff;
-}
-
-.services .icon-box-pink .icon i {
-    color: #ff689b;
-}
-.services .icon-box-cyan .icon i {
-    color: #3fcdc7;
-}
-.services .icon-box-green .icon i {
-    color: #41cf2e;
-}
-.services .icon-box-blue .icon i {
-    color: #2282ff;
-}
-.services .icon i {
-    font-size: 36px;
-    line-height: 1;
-}
-
-.services .icon-box-pink:hover {
-    border-color: #ff689b;
-}
-.services .icon-box-cyan:hover {
-    border-color: #3fcdc7;
-}
-.services .icon-box-green:hover {
-    border-color: #41cf2e;
-}
-.services .icon-box-blue:hover {
-    border-color: #2282ff;
-}
-
-.section-bg {
-    background-color: #f3f8fa;
-}
-
-.why-us .container {
-    box-shadow: 0 5px 25px 0 rgba(214, 215, 216, 0.6);
-    background: #fff;
-}
-
-.why-us .video-box img {
-    padding-top: 15px;
-    padding-bottom: 15px;
-}
-
-.why-us .icon-box .icon {
-    float: left;
+    width: 50px;
+    height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 72px;
-    height: 72px;
-    background: #f3f8fa;
-    border-radius: 6px;
-    transition: 0.5s;
-    cursor: pointer;
+    border: 1px solid rgba(0, 0, 0, .1);
 }
 
-.why-us .icon-box .icon i {
-    color: #68A4C4;
-    font-size: 32px;
-}
-
-.why-us .icon-box .icon:hover i {
-    color: #fff;
-}
-
-.why-us .icon-box .title {
-    margin-left: 95px;
-    font-weight: 700;
-    margin-bottom: 10px;
+.contact .contact-icon i {
     font-size: 18px;
-    text-transform: uppercase;
+    color: #0796fe;
+}
+.contact .contact-text {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    padding-left: 15px;
 }
 
-.why-us .icon-box .description {
-    margin-left: 95px;
-    line-height: 24px;
-    font-size: 14px;
-}
-
-.why-us .icon-box:hover .icon {
-    background: #68A4C4;
-}
-
-/*About*/
-
-
-
-
-
-/*Services*/
-
-.pricing .box {
-    padding: 40px;
+.contact .contact-form {
+    position: relative;
+    padding:30px;
+    border: 1px solid rgba(0, 0, 0, .1);
     margin-bottom: 30px;
-    box-shadow: 0px 0px 30px rgba(73, 78, 92, 0.15);
-    background: #fff;
-    text-align: center;
+    transition: .3s;
 }
-
-.pricing .featured {
-    z-index: 10;
-    margin: -30px -5px 0 -5px;
+.contact .contact-form:hover {
+    border-color: transparent;
+    box-shadow: 0 0 30px rgba(0, 0, 0, .1);
 }
-
-.section-title {
-    text-align: center;
-    padding-bottom: 30px;
-}
-.pricing h3 {
-    font-weight: 300;
-    margin-bottom: 15px;
-    font-size: 28px;
-}
-.pricing h4 {
-    font-size: 46px;
-    color: #68A4C4;
+.contact .contact-text h3 {
+    font-size: 16px;
     font-weight: 400;
-    font-family: "Open Sans", sans-serif;
-    margin-bottom: 25px;
-}
-.pricing h4 span {
-    color: #bababa;
-    font-size: 18px;
-    display: block;
-}
-.pricing ul {
-    padding: 0;
-    list-style: none;
-    color: #999;
-    text-align: left;
-    line-height: 20px;
-}
-.pricing ul li {
-    padding-bottom: 12px;
-}
-.pricing ul i {
-    color: #68A4C4;
-    font-size: 18px;
-    padding-right: 4px;
-}
-.pricing .get-started-btn {
-    background: #1e4356;
-    display: inline-block;
-    padding: 6px 30px;
-    border-radius: 20px;
-    color: #fff;
-    text-decoration: none;
-    font-size: 14px;
-    font-weight: 400;
-    font-family: "Roboto", sans-serif;
-    transition: 0.3s;
-}
- 
-.pricing .featured .get-started-btn {
-    background: #68A4C4;
-}
-.pricing .get-started-btn:hover {
-    background: #68A4C4;
-}
-.pricing ul .na span {
-    text-decoration: line-through;
+    color: #092a49;
+    letter-spacing: 1px;
 }
 
+.contact .contact-form textarea {
+    min-height: 100px;
+    padding: 8px 15px;
+    background: none;
+    border-radius: 0;
+    border: 1px solid rgba(0, 0, 0, .1);
+}
+.contact .contact-form .btn {
+    padding: 15px 30px;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    color: #092a49;
+    background: none;
+    border: 2px solid #092a49;
+    border-radius: 0;
+    transition: .3s;
+}
 
-.portfolioItem{
-    margin-bottom: 20px;
-    max-height: 233px;
+.contact .contact-form .btn:hover {
+    color: #0796fe;
+    background: #092a49;
+}
+
+.team .team-item {
+    position: relative;
+    margin-bottom: 75px;
+}
+
+.team .team-img {
+    position: relative;
+}
+
+.team .team-text {
+    position: absolute;
+    width: calc(100% - 30px);
+    height: 96px;
+    bottom: -46px;
+    left: 15px;
+    padding: 25px 15px;
+    text-align: center;
+    background: rgba(256, 256, 256, .9);
+    box-shadow: 0 0 30px rgba(0, 0, 0, .1);
+    transition: .3s;
     overflow: hidden;
 }
 
-.team-content{
-    padding: 10px;
+.team .team-text h5 {
+    color: #0796fe;
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 1px;
     margin-bottom: 10px;
 }
 
-.contact .info-box {
-    color: #444;
+.team .team-text p {
+    margin-bottom: 20px;
+    color: #092a49;
+}
+
+.team .team-social {
+    position: relative;
+    font-size: 0;
+}
+
+.team .team-social a {
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    margin: 0 3px;
+    padding: 5px 0;
     text-align: center;
-    box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
-    padding: 20px 0 30px 0;
-    margin-bottom: 30px;
-}
-
-.contact .php-email-form {
-    box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
-    padding: 30px;
-    margin-bottom: 30px;
-}
-
-.contact .info-box i {
-    font-size: 32px;
-    color: #68A4C4;
-    border-radius: 50%;
-    padding: 8px;
-    border: 2px dotted #a2cce3;
-}
-
-.contact .info-box h3 {
-    font-size: 20px;
-    color: #666;
-    font-weight: 700;
-    margin: 10px 0;
-}
-
-.contact .php-email-form button[type="submit"] {
-    background: #68A4C4;
-    border: 0;
-    padding: 10px 24px;
-    color: #fff;
-    transition: 0.4s;
-}
-.contact .php-email-form input {
-    padding: 20px 15px;
-}
-.contact .php-email-form input, .contact .php-email-form textarea {
-    border-radius: 0;
-    box-shadow: none;
     font-size: 14px;
+    color: #092a49;
+    border: 2px solid #092a49;
+    transition: .3s;
+}
+.team .team-social a:hover {
+    color: #0796fe;
+    border-color: #0796fe;
+}
+.team .team-item:hover .team-text {
+    height: 160px;
 }
 
-.react-tabs ul{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: space-evenly;
+.back-to-top {
+    position: fixed;
+    background: #0796fe;
+    width: 44px;
+    height: 44px;
+    text-align: center;
+    line-height: 1;
+    font-size: 22px;
+    right: 15px;
+    bottom: 15px;
+    transition: 0.5s;
+    z-index: 9;
 }
 
-.react-tabs ul li{
-    padding: 10px 20px;
-    border: 2px solid black;
-    cursor: pointer;
-}
-
-.react-tabs ul li.react-tabs__tab--selected{
-    border: 2px solid red;
-    color: red;
-}
-
-.TabsPannel{
-    padding:20px
-}
-
-.contact .php-email-form .validate {
-   
-    color: red;
-    margin: 0 0 15px 0;
-    font-weight: 400;
-    font-size: 13px;
-}
-
-
-
-@media (max-width: 768px){
-.breadcrumbs .d-flex {
-    display: block !important;
-}
+.back-to-top i {
+    color: #092a49;
+    padding-top: 10px;
 }
