--- a/src/css/Testimonial.css
+++ b/src/css/Testimonial.css
@@ -1,49 +1,62 @@
-.testimonials .testimonial-item {
-    text-align: center;
+.testimonial{
+    padding: 50px 0 80px;
+}
+.testimonial .testimonial-item img {
+    position: relative;
+    width: 80px;
+    border-radius: 80px;
+    margin-bottom: 15px;
 }
 
-.testimonials .testimonial-item .testimonial-img {
-    width: 120px;
-    border-radius: 50%;
-    border: 4px solid #fff;
-    margin: 0 auto;
+.testimonial .testimonial-item h2 {
+    position: relative;
+    color: #092a49;
+    font-size: 16px;
+    letter-spacing: 1px;
+    margin: 0 0 5px;
+    padding-bottom: 3px;
 }
 
-.slick-dots{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex !important;
-    justify-content: center;
+.testimonial .testimonial-item h2:after {
+    position: absolute;
+    content: "";
+    width: 30px;
+    height: 2px;
+    top:auto;
+    bottom: 0;
+    left: 0;
+    background: #0796fe;
+    transition: .3s;
+    border-bottom: none;
 }
-
-.slick-dots li button{
-    display: none;
+.testimonial .testimonial-item:hover h2:after {
+    width: 60px;
 }
-
-.testimonials .slick-dots li {
-    display: inline-block;
-    margin: 0 5px;
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    background-color: #ddd !important;
-    cursor: pointer;
-  }
-
-  .testimonials .slick-dots li.slick-active {
-    background-color: #68A4C4 !important;
-  }
-
-  .testimonials .testimonial-item h3 {
-    font-size: 20px;
-    font-weight: bold;
-    margin: 10px 0 5px 0;
-    color: #111;
-}
-
-  .testimonials .testimonial-item h4 {
+.testimonial .testimonial-item h3 {
+    color: #999999;
     font-size: 14px;
-    color: #999;
-    margin: 0 0 15px 0;
+    font-weight: 300;
+    letter-spacing: 2px;
+    margin: 0;
+}
+
+.testimonial .slick-arrow{
+     bottom:-90px;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    border-radius: 50%;
+}
+
+
+.testimonial .slick-arrow.slick-prev{
+    right: 65px;
+}
+
+.testimonial .slick-arrow.slick-next{
+    left: 65px;
+}
+
+.testimonial-item{
+    padding: 10px;
 }
